--- a/java/server/pom.xml
+++ b/java/server/pom.xml
@@ -37,6 +37,11 @@
 			<artifactId>memcached</artifactId>
 			<version>2.4.2</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-pool</groupId>
+			<artifactId>commons-pool</artifactId>
+			<version>1.5.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
