--- a/java/server/pom.xml
+++ b/java/server/pom.xml
@@ -37,11 +37,6 @@
 			<version>1.5.1</version>
 		</dependency>
 		<dependency>
-			<groupId>net.arnx</groupId>
-			<artifactId>jsonic</artifactId>
-			<version>1.1.0</version>
-		</dependency>
-		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.4.3</version>
@@ -50,6 +45,16 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.4.3</version>
+		</dependency>
+		<dependency>
+			<groupId>net.arnx</groupId>
+			<artifactId>jsonic</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>tokyocabinet</groupId>
+			<artifactId>tokyocabinet</artifactId>
+			<version>1.22</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
